# reproforge-sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  frontend.Dockerfile  pyproject.toml  render.yaml  shadowguard_results.csv  shadowguard_tfidf_vectorizer.pkl  synthetic_benchmark_cases.json  vite.config.ts
.lovable/: plan.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  amd.py  gemma.py  main.py  models.py  service.py
backend/artifacts/: README.md  amd-run.json
backend/src/backend/core/: __init__.py  config.py  dependency.py
backend/src/backend/core/database/: __init__.py  setup_sqlite.py
backend/src/backend/core/database/model/: __init__.py  claim_table.py  evidence_table.py  link_tables.py  log_table.py  passport_table.py  project_table.py  risk_indicator_table.py
backend/src/backend/internal/passport/: __init__.py  enum.py  handler.py  repository.py  service.py
backend/src/backend/internal/passport/model/: __init__.py  amd_proof.py  claim.py  evidence_item.py  log_detail.py  passport.py  risk_indicator.py  verification_output.py
backend/src/backend/server/: main.py
backend/tests/: test_amd.py  test_api.py  test_gemma.py
docs/: AMD_GPU_RUNBOOK.md  branch-flow.md  evidence-schema.md  evidence-validity.md  final-24h-execution-plan.md  gemma-amd-integration-contract.md  passport-flow.md  passport-schema.md  sample-passport.md  task-board.md
ml-detection/: model_report.md  pyproject.toml  requirements.txt  shadowguard.py  shadowguard_results.json  (+1 more)
(+29 files in other folders)
