[project]
name = "reproforge-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
workspace = { members = ["backend"] }

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
