[project]
name = "reproforge-sentinel-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.50.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]